# cpp-template

./: .clang-format  .clang-tidy  CMakeLists.txt  run.sh
cmake/: clang_tools.cmake  compiler_warnings.cmake  conan.cmake  project_settings.cmake  unit_tests.cmake
src/: main.cpp
src/utils/: array2d.hpp  coord.hpp  directions.hpp  rect.hpp  rng.hpp
tests/: example.cpp
